[package]
name = "cyclic-tower"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_ecs_ldtk = { version = "0.10.0", features = ["atlas"] }
bevy_rapier2d = "0.27.0"
rand = "0.8.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3




