[package]
name = "cyclic-tower"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_gilrs",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "x11",
    "bevy_gizmos",
    "default_font",
    "shader_format_glsl",
    "wav",
    "bevy_state",
    "webgl2",
] }
bevy_ecs_ldtk = { version = "0.10.0", features = ["atlas"] }
bevy_ecs_tilemap = "0.14.0"
bevy_rapier2d = "0.27.0"
rand = "0.8.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
